    #1605180)
  * DecoratedWindow: display unmaximize button if the window is
    vertically or horizontally maximized (LP: #1608480)
  * Make sure the switcher detail view is properly scaled. Also scale
    the xy_offset to make sure the switcher and launcher do not overlap.
    (LP: #1605256)
  * Close session dialog on first ESC. (LP: #1521116)

  [ Marco Trevisan (Treviño) ]
  * DecoratedWindow: avoid deferencing an invalid shadow texture ptr,
    and split functions (LP: #1608464)
  * DecoratedWindow: display unmaximize button if the window is
    vertically or horizontally maximized (LP: #1608480)
  * DecorationsForceQuitDialog: make CSS selectors work with gtk 3.20
  * UserAuthenticatorPam: ensure pam_handle_ is null initialized and
    don't proceed if not set (LP: #1611668)
  * DecorationStyle: set css name for Gtk 3.20

 -- Marco Trevisan (Treviño) <mail@3v1n0.net>  Tue, 23 Aug 2016 17:00:35 +0200

unity (7.4.0+16.04.20160801.2-0ubuntu1) xenial; urgency=medium

  [ Andrea Azzarone ]
  * FileManagerLauncherIcon: Don't trust the Quirk::VISIBLE in the ctor.
    (LP: #1599133)
  * [TrashLauncherIcon] Create GFileMonitor in an idle to avoid blocking
    calls. (LP: #1602720)
  * [LockSceen] Remove numlock warning. (LP: #1526322)
  * Make sure initiate and terminate callbacks are not empty before
    calling them. (LP: #1605012)
  * Properly destroy close_button_ to properly disconnect lambda. (LP:
    #1605010)
  * Use the standard notification-device-eject in the "device eject"
    notification. This allows us to scale it properly on high-dpi
    setups. (LP: #1605231)
  * Add tools to enforce unityshell plugin for the current profile and
    add "move" and "resize" plugins as requirements. (LP: #1506023, LP:
    #1605007, LP: #1604657)

  [ Marco Trevisan (Treviño) ]
  * Unity script: use result from unity_support_test to check the right
    COMPIZ_CONFIG_PROFILE to use (LP: #1602377)
  * LockScreenAcceleratorController: ensure callbacks are valid before